[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trontxsize"
version = "1.1.1"
description = "Calculate tron transaction size (bandwidth)"
readme = "README.md"
license = "MIT"
authors = [{ name = "MrNaif2018", email = "chuff184@gmail.com" }]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
keywords = ["tron", "trx", "bitcart", "bandwidth"]
dependencies = ["protobuf", "base58"]

[project.urls]
Homepage = "https://github.com/bitcart/trontxsize"
Source = "https://github.com/bitcart/trontxsize"
Changelog = "https://github.com/bitcart/trontxsize/blob/master/CHANGELOG.md"

[dependency-groups]
dev = [
    "black",
    "flake8",
    "isort",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "ruff",
    "tronpy",
]

[tool.uv]
default-groups = ["dev"]

[tool.hatch.build.targets.wheel]
packages = ["trontxsize"]

[tool.ruff]
target-version = "py39"
line-length = 127
extend-exclude = ["trontxsize/tron_pb2.py"]

[tool.ruff.lint]
select = [
    "F",
    "E",
    "I",
    "UP",
    "YTT",
    "B",
    "T10",
    "C",
    "SIM",
    "RUF100",
    "RET",
    "A",
    "S",
    "ASYNC",
]
ignore = ["RET502", "RET503", "S104", "S507", "ASYNC110"]
mccabe = { max-complexity = 12 }

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S"]

[tool.pytest.ini_options]
addopts = ["--cov=trontxsize", "--cov-report", "term-missing"]
filterwarnings = [
    "error::DeprecationWarning",
    "error::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["."]
omit = ["trontxsize/tron_pb2.py"]
